--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-.aqi_prediction/.env
-.aqi_prediction/venv
-.aqi_prediction/data
-.experiments/.env
-.experiments/data
-.experiments/venv
+aqi_prediction/.env
+aqi_prediction/venv
+aqi_prediction/data
+experiments/.env
+experiments/data
+experiment/.venv
